--- a/package.json
+++ b/package.json
@@ -13,22 +13,26 @@
     "build": "quasar build"
   },
   "dependencies": {
-    "pinia": "^2.0.11",
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "date-fns": "^3.3.1",
+    "pinia": "^2.0.11",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "quasar": "^2.6.0",
+    "uuid": "^9.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@quasar/app-webpack": "^3.0.0",
+    "@types/node": "^12.20.21",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.10.0",
-    "eslint-plugin-vue": "^9.0.0",
     "eslint-config-prettier": "^8.1.0",
-    "prettier": "^2.5.1",
-    "@types/node": "^12.20.21",
-    "@quasar/app-webpack": "^3.0.0"
+    "eslint-plugin-vue": "^9.0.0",
+    "prettier": "^2.5.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
