--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@types/lodash.debounce": "^4.0.9",
     "core-js": "^3.6.5",
     "date-fns": "^3.3.1",
+    "dom-to-pdf": "^0.3.2",
+    "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.11",
-    "pinia-plugin-persistedstate": "^3.2.1",
+    "pinia-plugin-persistedstate-2": "^2.0.15",
     "quasar": "^2.6.0",
     "uuid": "^9.0.1",
     "vue": "^3.0.0",
