--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/lodash.debounce": "^4.0.9",
     "core-js": "^3.6.5",
     "date-fns": "^3.3.1",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@quasar/app-webpack": "^3.0.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^12.20.21",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
