--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Een Vrolijk Verslag",
   "productName": "Vrolijk Verslag",
-  "author": "Hans <hansie211@hotmail.com>",
+  "author": "Hansie21 <hansie211@hotmail.com>",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
@@ -14,15 +14,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "@types/lodash.debounce": "^4.0.9",
     "core-js": "^3.6.5",
     "date-fns": "^3.3.1",
     "file-saver": "^2.0.5",
-    "jszip": "^3.10.1",
     "localforage": "^1.10.0",
-    "lodash": "^4.17.21",
     "pinia": "^2.0.11",
-    "pinia-plugin-persistedstate-2": "^2.0.15",
+    "pinia-plugin-persistedstate-2": "^2.0.19",
     "quasar": "^2.6.0",
     "uuid": "^9.0.1",
     "vue": "^3.0.0",
