--- a/src/assets/application_properties.json
+++ b/src/assets/application_properties.json
@@ -1,4 +1,8 @@
 {
   "title": "Vrolijk Verslag",
-  "maxImagesPerDay": 20
+  "maxImagesPerDay": 20,
+  "imageSize": {
+    "width": 1280,
+    "height": 1280
+  }
 }
